# esp32-blehid

./: CMakeLists.txt  ascii_array.txt  ascii_hid_table.py  esp_idf_partitions.csv  esp_idf_readme.md  python_client_example.py  quickstart_guide.md  sdkconfig  sdkconfig.default  tmp_composite_example.py  tmp_hid_services.py  web_control_interface.html
main/: CMakeLists.txt  ble_hid.c  ble_hid.h  dns_server.c  dns_server.h  hid_ascii_table.h  hid_device.c  hid_device.h  hid_keyboard.h  hid_keymap.c  hid_keymap.h  http_server.c  http_server.h  idf_component.yml  main.c  mouse_report_builder.c  mouse_report_builder.h  nvs_keystore.c  nvs_keystore.h  transport_uart.c  transport_uart.h  transport_ws.c  transport_ws.h  wifi_credentials.c  wifi_credentials.h  wifi_manager.c  wifi_manager.h  ws_ascii.c  ws_ascii.h
main/web/: index.html
tests/: test_ascii_hid_table.py  test_hid_report_map.py  test_wifi_credentials.py  test_wifi_manager_connect_wait.py  test_wifi_manager_scan_transition.py  test_ws_ascii_sequence.py  test_ws_mouse_reports.py
tests/stubs/: esp_err.h  esp_event.h  esp_log.h  esp_mac.h  esp_netif.h  esp_wifi.h  esp_wifi_types.h  mdns.h  nvs.h  nvs_flash.h  sdkconfig.h  wifi_manager_test_stubs.c  wifi_manager_test_stubs.h
tests/stubs/freertos/: FreeRTOS.h  task.h  timers.h
tests/stubs/lwip/: inet.h
tools/: generate_ascii_hid.py
